--- a/frontend/src/components/Footer.scss
+++ b/frontend/src/components/Footer.scss
@@ -1,9 +1,21 @@
 footer {
-    margin-top: 100px;
-    padding: 20px;
-    background-color: $lightGreen;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 12px;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  width: 100%;
+  // position: fixed;
+  // position:relative;
+  margin-top: auto;
+  flex: 0 0 50px;
+  bottom: 0;
+  font-family: 'Impact', sans-serif;
+}
+.footerspan {
+  display: block;
+  margin-bottom: 10px;
+}
+.anchor {
+  font-family: serif;
+
 }
