--- a/frontend/src/components/NavbarAdmin.scss
+++ b/frontend/src/components/NavbarAdmin.scss
@@ -43,7 +43,8 @@
         border-radius: 5px; /* Optional: Add rounded corners */
         background-color: #2ecc71; /* Button background color */
         transition: background-color 0.3s ease; /* Smooth transition effect */
-  
+        margin-left: 15px;
+        margin-right: 15px;
         &:hover {
           background-color: #27ae60; /* Hover background color */
         }
