--- a/frontend/src/pages/Admin.scss
+++ b/frontend/src/pages/Admin.scss
@@ -10,30 +10,28 @@
         flex-direction: column;
         align-items: center;
         margin:auto;
-        width: 80%;
+        width: 90%;
         .buttons {
             display: flex;
-            // flex-direction: row;
             width: 100%;
             align-items: center;
+            margin:auto;
             padding: 20px 20px 20px 20px;
             background-color: black;
-            // width:100%;
             margin: auto;
+            border-radius: 10px;
             button {
-                width: 100px;
                 margin-left: 20px;
                 margin-right: 20px;
+                border-radius: 8px;
             }
         }
         .populate {
             align-items: center;
-            display: flex;
-            background-color: aqua;
-            width:100%;
             margin: auto;
-
-            // width: 80%;
+            display: flex;
+            padding: 20px 20px 20px 20px;
+            width:100%;
         }
     }
 }
