--- a/frontend/src/components/NavbarAdmin.scss
+++ b/frontend/src/components/NavbarAdmin.scss
@@ -12,46 +12,68 @@
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle box shadow for depth */
-  
-    .container {
-      margin: 0 auto;
-      max-width: 1200px; /* Adjust as needed */
-      width: 90%;
-    }
-  
+
     h1 {
-      color: #fff; /* Text color */
-      margin: 0;
+      color: #fff;
       font-size: 1.5rem; /* Adjust as needed */
-    }
-  
-    .links {
-      display: flex;
+      margin: auto;
+      text-align: center;
       align-items: center;
-      margin-left: auto; /* Push links to the right */
-  
-      span {
-        margin-right: 15px; /* Adjust as needed */
-        color: #fff; /* Text color */
-        font-weight: bold;
-      }
-  
-      a, .logout {
-        text-decoration: none;
-        color: #fff; /* Text color */
-        padding: 8px 15px; /* Adjust as needed */
-        border-radius: 5px; /* Optional: Add rounded corners */
-        background-color: #2ecc71; /* Button background color */
-        transition: background-color 0.3s ease; /* Smooth transition effect */
-        margin-left: 15px;
-        margin-right: 15px;
-        &:hover {
-          background-color: #27ae60; /* Hover background color */
+      width: 300px;
+    }
+    .container {
+      margin-right: 20px;
+      margin-top: 0;
+      display: flex;
+      .links {
+        display: flex;
+        align-items: center;
+        margin-right: 50px;
+        margin-left: auto; /* Push links to the right */
+        span {
+          margin-right: 15px; /* Adjust as needed */
+          color: #fff; /* Text color */
+          font-weight: bold;
+        }
+        .link {
+          text-decoration: none;
+          color: #fff; /* Text color */
+          padding: 8px 15px; /* Adjust as needed */
+          border-radius: 5px; /* Optional: Add rounded corners */
+          background-color: #2ecc71; /* Button background color */
+          transition: background-color 0.3s ease; /* Smooth transition effect */
+          margin-left: 15px;
+          margin-right: 15px;
+          &:hover {
+            background-color: #27ae60; /* Hover background color */
+          }
         }
       }
-  
-      .logout {
-        margin-left: 15px; /* Add margin between the links */
+      .session_details {
+        margin-right: 15px;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        border-radius: 20px;
+        padding: 10px 20px 10px 20px;
+        margin-top: auto;
+        margin-bottom: auto;
+        span {
+          margin-right: 15px; /* Adjust as needed */
+          color: #fff; /* Text color */
+          font-weight: bold;
+        }
+        .logout {
+          text-decoration: none;
+          color: #fff; /* Text color */
+          padding: 8px 15px; /* Adjust as needed */
+          border-radius: 5px; /* Optional: Add rounded corners */
+          background-color: orange; /* Button background color */
+          transition: background-color 0.3s ease; /* Smooth transition effect */
+          &:hover {
+            background-color: #27ae60; /* Hover background color */
+          }
+        }
       }
     }
   }
