--- a/frontend/src/pages/SelectParts.scss
+++ b/frontend/src/pages/SelectParts.scss
@@ -2,14 +2,18 @@
   display: flex;
   flex-direction: column;
   padding: 10px 10px 10px 10px;
-
+  h2 {
+    align-items: center;
+    margin:auto;
+    margin-bottom: 10px;
+  }
   label {
     display: flex;
     align-items: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     span {
       align-items: left;
       text-align: left;
@@ -20,14 +24,18 @@
       width: 100px;
     }
     .quantity-input {
+      align-items: center;
       width: 300px;
       border-radius: 4px;
+      border: none;
     }
     .select-option {
+      align-items: center;
       margin-bottom: 10px;
       padding: 8px;
-      border: 1px solid #ccc;
+      border: none;
       border-radius: 4px;
+      width: 300px;
     }
   }
   .add-part-button {
