--- a/frontend/src/pages/SupplierModal.scss
+++ b/frontend/src/pages/SupplierModal.scss
@@ -1,4 +1,3 @@
-// SupplierModal.scss
 .modal {
     display: none;
     position: fixed;
@@ -12,21 +11,20 @@
     z-index: 1000;
 }
 
-  .modal.open {
-    display: flex;
-    margin: auto;
-    align-items: center;
-    width: 100%;
-  }
+.modal.open {
+  display: flex;
+  margin: auto;
+  align-items: center;
+  width: 100%;
+}
 
-#modalcontainer {
+.modal {
   .modal-content {
     scroll-behavior: auto;
     background: whitesmoke;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    width: 60%;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
