--- a/frontend/src/pages/SupplierModal.scss
+++ b/frontend/src/pages/SupplierModal.scss
@@ -81,4 +81,9 @@
       background-color: rgb(4, 100, 90);
     }
   }
+  select {
+    padding: 10px 10px 10px 10px;
+    width: 500px;
+    border-radius: 10px;
+  }
 }
