--- a/frontend/src/pages/AdminOrders.scss
+++ b/frontend/src/pages/AdminOrders.scss
@@ -1,8 +1,8 @@
-// Suppliers.scss
 .order_container {
+    width: 96%;
     margin: auto;
-    width: 100%;
     align-items: center;
+    margin-bottom: 20px;
     .order-table {
         margin: auto;
         align-items: center;
@@ -31,19 +31,31 @@
                 }
             }
         }
-        .add-button {
+        .view-button {
+            background-color: #04fcca;
+            color: white;
+            border-radius: 7px;
+            align-items: center;
+            margin-top: 10px;
+            margin-bottom: 20px;
+            padding: 10px 10px 10px 10px;
+            cursor: pointer;
+            &:hover {
+                background-color: #40e0c0;
+                color: black;
+            }
+        }
+        .status-button {
             background-color: rgb(0, 170, 255);
             color: white;
             border-radius: 7px;
             align-items: center;
             margin-top: 10px;
             margin-bottom: 20px;
-            font-size: large;
-            width: 200px;
             padding: 10px 10px 10px 10px;
             cursor: pointer;
             &:hover {
-                background-color: #40e0c0;
+                background-color: rgb(97, 202, 255);
                 color: black;
             }
         }
