--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,4 +2,7 @@ body {
     margin: 0 0 0 0;
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
