--- a/frontend/src/components/NavbarAdmin.scss
+++ b/frontend/src/components/NavbarAdmin.scss
@@ -1,7 +1,7 @@
 /* NavbarAdmin.scss */
 
 .navbaradmin {
-    background-color: #3498db; /* Calm background color */
+    background-color: #000000; /* Calm background color */
     padding: 20px 0; /* Increase top and bottom padding for more height */
     line-height: 1.5; /* Adjust line height to vertically center content */
     position: relative;
@@ -16,7 +16,7 @@
     h1 {
       color: #fff;
       font-size: 1.5rem; /* Adjust as needed */
-      margin: auto;
+      // margin: auto;
       text-align: center;
       align-items: center;
       width: 300px;
