--- a/frontend/src/pages/Admin.scss
+++ b/frontend/src/pages/Admin.scss
@@ -35,3 +35,11 @@
         }
     }
 }
+button[name="admin"] {
+    top: 0;
+    right: 0;
+    margin: 10px;
+    width: 100px; 
+    height: 30px; 
+    font-size: 14px; 
+  }
