--- a/frontend/src/styles/Cart.scss
+++ b/frontend/src/styles/Cart.scss
@@ -6,11 +6,12 @@
     margin-right: 20px;
     display: flex;
     flex-direction: column;
+    min-height: 65vh;
     .cart-h {
         color: rgb(0, 0, 0);
-        font-size: 45px;
+        font-size: 30px;
         font-weight: bolder;
-        font-family: 'Times New Roman', Times, serif;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         margin-bottom: 10px;
         margin-top: 20px;
     }
@@ -86,11 +87,11 @@
     padding: 10px 10px 10px 10px;
     background-color: rgb(64, 224, 83);
     color: white;
-    font-size: xx-large;
+    font-size: x-large;
     font-family: 'Times New Roman', Times, serif;
     border: none;
     border-radius: 5px;
-    width: 30%;
+    width: 20%;
     cursor: pointer;
     margin-top: 20px;
     margin-bottom: 20px;
