Change css files to scc

--- a/frontend/src/styles/NavbarClient.scss
+++ b/frontend/src/styles/NavbarClient.scss
@@ -50,6 +50,11 @@
           background-color: #0006b1; /* Hover background color */
         }
       }
+      #cart-button{
+        span {
+          margin-right: 5px;
+        }
+      }
     }
     .session_details {
       margin-right: 15px;
