--- a/frontend/src/pages/ClientUpdate.scss
+++ b/frontend/src/pages/ClientUpdate.scss
@@ -1,36 +1,54 @@
 // ClientUpdate.scss
+.client-update {
+  min-height: 100vh;
+}
+
 .client-container {
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
+    background-color: #ffffff;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
     padding: 20px;
-    margin: 20px;
     max-width: 600px;
     margin: auto;
-  }
-  
-  .client-container h2 {
-    color: #333;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+
+  .up-h {
     font-size: 24px;
+    margin-right: auto;
     margin-bottom: 20px;
+    margin-right: 20px;
+    text-align: center;
   }
   
-  .client-container div {
+  div {
     margin-top: 15px;
+    margin-left: 20px;
   }
   
-  .client-container p {
+  p {
     margin: 10px 0;
     font-size: 16px;
+    color: black;
   }
   
-  .client-container strong {
-    font-weight: bold;
-  }
   
-  .client-container p:first-child {
+  p:first-child {
     font-size: 18px;
   }
-  
+  button {
+    color: black;
+    margin-top: 10px;
+    background-color: aqua;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    &:hover {
+      background-color: rgb(24, 213, 213);
+    }
+  }
+  .addAdmin {
+    background-color: aquamarine;
+  }
   // Add more styles as needed
-  
+}
