--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -80,7 +80,7 @@
         width: 250px;
         margin: 20px;
         padding: 15px;
-        background-color: #fff;
+        background-color: #ffffff;
         border-radius: 10px;
         box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
         transition: transform 0.3s ease-in-out;
