--- a/frontend/src/styles/SupplierModal.scss
+++ b/frontend/src/styles/SupplierModal.scss
@@ -52,6 +52,7 @@
     display: flex;
     flex-direction: column;
     padding: auto;
+    margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
   }
