--- a/frontend/src/styles/Statistics.scss
+++ b/frontend/src/styles/Statistics.scss
@@ -35,7 +35,7 @@
             // margin: auto;
             // border-radius: 10px;
         }
-        .populate {
+        .populate-stats {
             align-items: center;
             margin-right: 0px;
             margin-left: 0px;
