--- a/frontend/src/styles/SupplierModal.scss
+++ b/frontend/src/styles/SupplierModal.scss
@@ -26,6 +26,9 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
+    max-height: 90%;
+    overflow-y: scroll;
+    scroll-behavior: smooth;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   }
@@ -55,6 +58,7 @@
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
+    width: 80%;
   }
 
   label {
@@ -69,7 +73,7 @@
     margin-right: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    width: 500px;
+    width: 100%;
   }
   button {
     padding: 10px 10px 10px 10px;
@@ -87,5 +91,6 @@
     padding: 10px 10px 10px 10px;
     width: 500px;
     border-radius: 10px;
+    width: 100%;
   }
 }
