--- a/frontend/src/styles/NavbarAdmin.scss
+++ b/frontend/src/styles/NavbarAdmin.scss
@@ -1,7 +1,7 @@
 /* NavbarAdmin.scss */
-
 .navbaradmin {
     background-color: #000000; /* Calm background color */
+    background-color: #020a21; /* Calm background color */
     padding: 20px 0; /* Increase top and bottom padding for more height */
     line-height: 1.5; /* Adjust line height to vertically center content */
     position: relative;
