--- a/frontend/src/styles/AdminOrders.scss
+++ b/frontend/src/styles/AdminOrders.scss
@@ -66,6 +66,7 @@
                     background-color: #000000;
                 }
             }
+            margin-right: 10px;
         }
         .order-buttons {
             display: flex;
