--- a/frontend/src/styles/AdminOrdersPage.scss
+++ b/frontend/src/styles/AdminOrdersPage.scss
@@ -2,6 +2,11 @@
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    .division {
+        background-color: rgb(0, 0, 0);
+        margin: 0px;
+        padding: 5px;
+    }
     .options {
         display: flex;
         // flex-direction: column;
@@ -16,7 +21,7 @@
             margin-right: 0px;
             margin-bottom: 0px;
             padding: 20px 20px 20px 20px;
-            background-color: rgb(11, 2, 69);
+            background-color: rgb(0, 21, 47);
             button {
                 margin-left: 20px;
                 margin-top: 10px;
