--- a/frontend/src/styles/SupplierModal.scss
+++ b/frontend/src/styles/SupplierModal.scss
@@ -94,3 +94,13 @@
     width: 100%;
   }
 }
+.Assigned-Employee {
+  font-family: inherit;
+  margin: auto;
+  margin-top: 20px;
+  span {
+    font-size: large;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  }
+  text-align: center;
+}
